# deepdiff_viewer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
deepdiff_viewer/: base.py  rich.py
examples/: complex.py  simple.py  with_pydantic.py
tests/: test_diff_type.py  test_render_rich.py  test_tree_compute.py
