[tool.poetry]
name = "deepdiff-viewer"
version = "0.1.1"
description = "Viewer tools for the `DeepDiff` object of the `deepdiff` library."
authors = ["Baptiste Bourdet <bat.bourdet@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deepdiff_viewer"}]

[tool.poetry.dependencies]
python = "^3.10"
deepdiff = "^6.3.1"
rich = {version = "^13.4.2", optional = true}
pyyaml = {version = "^6.0.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.4.1"
isort = "^5.12.0"
types-pyyaml = "^6.0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
rich = ["rich", "pyyaml"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
